--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@
     min-height: 56px;
 }
 .location{
+    display: flex;
+    align-items: center;
     margin: 12px;
 }
 
@@ -148,6 +150,8 @@
     
 }
 .timer{
+    display: flex;
+    align-items: center;
     margin: 12px;
 }
 .search-here{
@@ -186,9 +190,10 @@
     font-family: uber-move;
     color: black;
     line-height: 16px;
-    font-family: 500;
-    
-    
+    font-family: 500;   
+}
+.order-content{
+    margin-top: -1px;
 }
 /*----------------------------------MIDDLE-SECTION----------------------------------------*/
 
@@ -357,7 +362,7 @@
 
 .footer-section{
     margin: 64px 0px 0px;
-    padding: 64px 18px 80px;
+    padding: 64px 16px 80px;
 }
 .uber-eats-logo img{
     margin-bottom: 48px;
@@ -406,6 +411,10 @@
 .desk-main-banner{
     display: none;
 }
+.appstore img{
+    width: 135px;
+    height: 40px;
+}
 
 
 /*-----------------------MEDIA-QUERY--------------------------*/
@@ -442,10 +451,13 @@
         flex-direction: row;
         align-items: center;
         gap: 5px;
+        margin-bottom: -2px;
+        margin-left: 1px;
     }
     .desk-nav-right{
         display: flex;
         flex-direction: row;
+        margin-top: -1px;
     }
     .desk-nav-login{
         display: flex;
@@ -487,7 +499,7 @@
         width: 100%;
         align-items: flex-start;
         padding: 0px 40px;
-        margin-top: 3px;
+        margin-top: 1px;
     }
     .order-near-txt p{
         font-size: 52px;
@@ -570,6 +582,9 @@
         display: flex;
         align-items: center;
     }
+    .or-sign-in a{
+        color: black;
+    }
 
     .or-sign-in{
         display: flex;
@@ -602,8 +617,11 @@
     .map-section{
         padding: 16px 40px;
     }
-    .cities-txt{
+    .cities-txt-content{
         padding: 0px 40px;
+    }
+    .cities-txt{
+        padding: 0px;
     }
     .cities-txt h2{
         font-size: 36px;
@@ -628,17 +646,29 @@
 
     }
     .footer-section{
-        padding: 72px 40px 88px;
+        margin: 80px 0px 0px;
+        padding: 72px 0px 88px;
+        border-top: 1px solid #f3f3f3;
+    }
+    .main-footer-section{
+        padding: 0px 40px;
     }
     .main-social-media{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        padding: 0px 40px;
     }
     .main-uber-logo{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        flex: 2;
+    }
+    .main-get-help{
+        flex: 2;
+        display: flex;
+        gap: 70px;
     }
 
     /*----------------------------FOOTER-SECTION-------------------------------*/
@@ -646,7 +676,89 @@
     .privacy-policy{
         display: flex;
         flex-flow: wrap;
+        justify-content: end;
+        margin-bottom: 0px;
+    }
+    .social-media{
+        margin-bottom: 0px;
+    }
+    .appstore img{
+        width: 135px;
+    }
+    .appstore-logo{
+        margin-bottom: 100px;
+    }
+    .privacy-policy p{
+        padding-right: 30px;
     }
 
+    .countries-name h2{
+        display: none;
+    }
+    .counties-txt-content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .txt-countries a{
+        font-size: 16px;
+        font-family: uber-move;
+        line-height: 20px;
+        font-weight: 700;
+        color: black;
+    }
+    .country-txt p{
+        font-size: 36px;
+    }
+    .town-txt h2{
+        display: none;
+    }
+    .cities-txt-content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .txt-town a{
+        font-size: 16px;
+        font-family: uber-move;
+        line-height: 20px;
+        font-family: 700;
+        color: black;
+    }
+    .three-lines{
+        margin-right: 17px;
+        margin-left: -1px;
+        margin-top: 1px;
+    }
+
+}
+
+/*--------------------------------------WIDTH-1440PX-----------------------------*/
+@media screen and (min-width:1440px) {
+    .footer-section{
+        padding: 72px 0px 80px;
+    }
+    .main-footer-section{
+        margin: 0px 80px;
+        padding: 0px 40px;
+    }
+    .main-social-media{
+        margin: 0px 80px;
+        padding: 0px 40px;
+        
+    }
+    .main-get-help{
+        flex: 2;
+        display: flex;
+        gap: 105px;
+    }
+    .privacy-policy{
+        margin: 0px;
+        justify-content: end;
+    }
+    
+    .privacy-policy p{
+        padding-right: 30px;
+    }
 }
 
